build/log/idf_py_stdout_output_3284
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Project\arm4Joint\army\build\bootloader\esp-idf\esptool_py && d:\After_the_April\espExpress\python_env\idf5.4_py3.11_env\Scripts\python.exe D:/After_the_April/espTools/v5.4.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Project/arm4Joint/army/build/bootloader/bootloader.bin"
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/UARTConnect.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/UARTConnect.c.obj 
ccache D:\After_the_April\espExpress\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Project/arm4Joint/army/build/config -I"D:/Project/arm4Joint/army/main/ " -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/newlib/platform_include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/config/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/config/include/freertos -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/config/xtensa/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/freertos/esp_additions/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/include/soc -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/include/soc/esp32 -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/dma/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/ldo/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/debug_probe/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/port/esp32/. -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_hw_support/port/esp32/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/heap/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/heap/tlsf -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/log/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/soc/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/soc/esp32 -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/soc/esp32/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/soc/esp32/register -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/hal/platform_port/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/hal/esp32/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/hal/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_rom/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_rom/esp32/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_rom/esp32/include/esp32 -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_rom/esp32 -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_common/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_system/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_system/port/soc -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_system/port/include/private -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/xtensa/esp32/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/xtensa/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/xtensa/deprecated_include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/include/apps -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/include/apps/sntp -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/lwip/src/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/port/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/port/freertos/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/port/esp32xx/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/driver/deprecated -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/driver/i2c/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/driver/touch_sensor/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/driver/twai/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/driver/touch_sensor/esp32/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_pm/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_ringbuf/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_gpio/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_pcnt/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_gptimer/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_spi/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_mcpwm/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_ana_cmpr/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_i2s/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_sdmmc/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/sdmmc/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_sdspi/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_sdio/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_dac/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_rmt/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_tsens/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_sdm/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_i2c/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_uart/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/vfs/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_ledc/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_parlio/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_driver_usb_serial_jtag/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/nvs_flash/include -ID:/After_the_April/espTools/v5.4.1/esp-idf/components/esp_partition/include -ID:/Project/arm4Joint/army/managed_components/espressif__led_strip/include -ID:/Project/arm4Joint/army/managed_components/espressif__led_strip/interface -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Project/arm4Joint/army=. -fmacro-prefix-map=D:/After_the_April/espTools/v5.4.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/UARTConnect.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\UARTConnect.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/UARTConnect.c.obj -c D:/Project/arm4Joint/army/main/UARTConnect.c
D:/Project/arm4Joint/army/main/UARTConnect.c: In function 'uart_check_signals':
D:/Project/arm4Joint/army/main/UARTConnect.c:58:21: error: implicit declaration of function 'uart_get_signal_inv' [-Wimplicit-function-declaration]
   58 |     esp_err_t ret = uart_get_signal_inv(UART_PORT, &inv);
      |                     ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
